--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.5.1",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^2.3.3",
     "moment": "2.29.4",
     "nouislider": "15.1.0",
-    "react": "18.2.0",
+    "react": ">=16.8.0",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "3.1.1",
-    "react-dom": "18.2.0",
+    "react-dom": ">=16.8.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "react-select": "4.3.1",
