--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "@formspree/react": "^2.3.3",
     "moment": "2.29.4",
     "nouislider": "15.1.0",
-    "react": ">=16.8.0",
+    "react": "^17.0.2",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "3.1.1",
-    "react-dom": ">=16.8.0",
+    "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
     "react-scripts": "5.0.1",
     "react-select": "4.3.1",
@@ -45,10 +45,6 @@
   "optionalDependencies": {
     "@babel/core": "7.18.9",
     "typescript": "4.7.4"
-  },
-  "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
   },
   "devDependencies": {
     "gulp": "4.0.2",
