--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.3.3",
+    "boostrap": "^2.0.0",
     "moment": "2.29.4",
     "nouislider": "15.1.0",
     "react": "^17.0.2",
